Fix trip spacing on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -1274,6 +1274,12 @@ video {
   .md\:gap-y-12 {
     row-gap: 3rem;
   }
+
+  .md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
 }
 
 @media (min-width: 1024px) {
